--- a/client/src/sass/_variable.scss
+++ b/client/src/sass/_variable.scss
@@ -20,11 +20,13 @@ $colors: (
   'white': #fff,
   'black': #000,
   'main': $main-color,
-  'yellow':yellow,
+  'yellow':#FFFF00,
   'brown': brown,
   'purple': purple,
   'be': #F5F5DC,
   'red': red,
+  'green':#00FF00,
+  'aqua':#00FFFF,
 );
 $mobile-width: 599px;
 $tablet-width: 1000px;
