--- a/client/src/sass/components/card/_product-card.scss
+++ b/client/src/sass/components/card/_product-card.scss
@@ -3,13 +3,13 @@
   margin-bottom: 30px;
   position: relative;
   padding-bottom: 50px;
-  &__input{
-      position: absolute;
-      z-index: 100;
-      bottom: 50%;
-      width: 20px;
-      height: 20px;
-      transform: translateY(10px)
+  &__input {
+    position: absolute;
+    z-index: 100;
+    bottom: 50%;
+    width: 20px;
+    height: 20px;
+    transform: translateY(10px);
   }
   &__img {
     padding-top: 150%;
@@ -44,6 +44,11 @@
     }
   }
   &__btn {
+    @include mobile {
+      .mobile-hide {
+        display: none;
+      }
+    }
     transform: translateY(-40%);
     @include tabletPro {
       transform: translateY(0);
@@ -91,7 +96,7 @@
     color: $main-color;
     margin-bottom: 8px;
     min-height: 45px;
-    @include mobile{
+    @include mobile {
       min-height: 55px;
     }
     transform: translateY(-10px);
@@ -172,19 +177,19 @@
     width: 35px;
     height: 35px;
     @include flex(center, center);
-    &:hover{
-       animation: likeAnimation linear 1.2s infinite
+    &:hover {
+      animation: likeAnimation linear 1.2s infinite;
     }
   }
 }
 @keyframes likeAnimation {
-  0%{ 
+  0% {
     transform: rotate(-15deg);
   }
-  50%{
+  50% {
     transform: rotate(15deg);
   }
-  100%{
+  100% {
     transform: rotate(-15deg);
   }
 }
