--- a/client/src/sass/components/product.scss
+++ b/client/src/sass/components/product.scss
@@ -24,6 +24,9 @@
         width: 30%;
       }
       &__item {
+        :last-child{
+          margin-top: 10px;
+        }
         cursor: pointer;
       }
     }
