--- a/client/src/sass/components/_header.scss
+++ b/client/src/sass/components/_header.scss
@@ -32,6 +32,9 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 110px;
+    @include mobile{
+      left: 35%;
+    }
     &__user{
       height: 30px;
       @include mobile {
@@ -61,7 +64,6 @@
       color: $main-color;
       font-weight: 550;
       position: relative;
-      padding-bottom: 4px;
       &.active {
         @include tablet {
           border-bottom: none;
@@ -83,6 +85,10 @@
         &__quantity{
           position: absolute;
           font-size: 18px;
+          @include mobile {
+            font-size: 14px;
+            top: 2px;
+          }
           top: 0;
           right:0;
           transform: translate(50%, -50%)
