--- a/client/src/sass/components/card/_product-card.scss
+++ b/client/src/sass/components/card/_product-card.scss
@@ -44,6 +44,7 @@
     }
   }
   &__btn {
+    @include flex(center, space-between);
     @include tablet {
       .mobile-hide {
         display: none;
