--- a/client/src/sass/components/_cart.scss
+++ b/client/src/sass/components/_cart.scss
@@ -14,6 +14,9 @@
 
   &__list {
     width: 60%;
+    @include flex(center, space-between);
+    flex-direction: column;
+    gap: 20px;
     @include tablet {
       width: 100%;
     }
@@ -43,6 +46,7 @@
       }
       &__detail {
         width: 80%;
+        @include flex(center, space-between);
         @include mobile {
           width: 70%;
           &__price {
@@ -51,7 +55,6 @@
             }
           }
         }
-        @include flex(center, space-around);
         font-size: 1.6rem;
         @include mobile {
           @include flex(center, space-between);
