--- a/client/src/sass/components/_catalog.scss
+++ b/client/src/sass/components/_catalog.scss
@@ -4,104 +4,45 @@
   @include tablet {
     flex-direction: column;
   }
-  &__filter::-webkit-scrollbar {
-    display: none;
-  }
-  height: calc(100vh- $header-tablet-height);
-  &__filter {
-    width: 30%;
-    @include flex(flex-start, flex-start);
-    flex-wrap: wrap;
-    overflow: auto;
-    @include tablet {
-      width: 40%;
-      height: 100%;
-      background-color: $main-bg;
-      padding: 1rem;
-      padding-top: 0;
-      position: fixed;
-      left: 0;
-      top: $header-tablet-height;
-      z-index: 99;
-      transform: translateY(-100%);
-      transition: transform 0.3s ease;
-      z-index: 98;
-    }
-    @include mobile {
-      top: $header-mobile-height;
-      width: 100%;
-    }
-
-    &.active {
-      transform: translateY(0);
-    }
-    &__widget:last-child {
-      flex-grow: 1;
-      @include mobile {
-        @include flex(center, flex-start);
-      }
-    }
-    &__widget {
-      padding-left: 1rem;
-      @include tablet{
-        margin-top: 4rem;
-      }
-      width: 50%;
-      &__title {
-        font-size: 1.8rem;
-        font-weight: 600;
-        text-transform: capitalize;
-        color: $main-color;
-        min-height:60px;
-      }
-
-      &__content {
-        font-size: 1.6rem;
-        color: $text-second-color;
-
-        height: 100%;
-        &__item {
-          margin-bottom: 13px;
-        }
-        &__btnfilter{
-          display: none;
-          @include tablet{
-           
-            margin-bottom: 10px;
-            display: block;
-          }
-          @include mobile{
-            margin-top: 10px;
-            margin-right: 10px;
-          }
-        }
-      }
-    }
-
-    &__close {
-      display: none;
-      @include tablet {
-        padding-left: 1rem;
-        display: block;
-        font-size: 2.5rem;
-        background-color: #fff;
-        position: absolute;
-      }
-    }
-  }
-
   &__content {
-    width: 70%;
-    @include flex(center, center);
+    &__delete-all {
+      height: 50px;
+      margin-bottom: 20px;
+      font-size: 1.4rem;
+      @include flex(center, space-between);
+      gap: 15px;
+      .show{
+        display: none;
+      }
+      span {
+        font-size: 1.6rem;
+        color: $main-color;
+        font-weight: bold;
+      }
+      input {
+        width: 25px;
+        height: 25px;
+      }
+      button {
+        background-color: red;
+        padding: 8px;
+        border-radius: 4px;
+        color: #fff;
+        display:block;
+      }
+    }
+    width: 100%;
+    @include flex(center, space-between);
+    flex-direction: column;
     @include tablet {
       width: 100%;
     }
-    &__not-found{
+    &__not-found {
       transform: translateY(65%);
-      &__main{
+      &__main {
         @include flex(center, center);
         flex-direction: column;
-        gap:20px;
+        gap: 20px;
         color: $main-color;
         font-size: 1.4rem;
         text-align: center;
@@ -118,11 +59,9 @@
   &__filter__toggle {
     display: none;
     @include tablet {
-      z-index: 97;   
+      z-index: 97;
       display: block;
       margin-bottom: 2rem;
     }
   }
-
-
 }
