--- a/client/src/sass/components/_catalog.scss
+++ b/client/src/sass/components/_catalog.scss
@@ -5,31 +5,8 @@
     flex-direction: column;
   }
   &__content {
-    &__delete-all {
-      height: 50px;
-      margin-bottom: 20px;
-      font-size: 1.4rem;
-      @include flex(center, space-between);
-      gap: 15px;
-      .show{
-        display: none;
-      }
-      span {
-        font-size: 1.6rem;
-        color: $main-color;
-        font-weight: bold;
-      }
-      input {
-        width: 25px;
-        height: 25px;
-      }
-      button {
-        background-color: red;
-        padding: 8px;
-        border-radius: 4px;
-        color: #fff;
-        display:block;
-      }
+    .catolog_wrap {
+      width: 100%;
     }
     width: 100%;
     @include flex(center, space-between);
@@ -37,6 +14,63 @@
     @include tablet {
       width: 100%;
     }
+    &__action {
+      @include flex(center, space-between);
+      margin-bottom: 20px;
+      width: 100%;
+      &__delete-all {
+        height: 50px;
+        width: 20%;
+        font-size: 1.4rem;
+        @include flex(center, flex-start);
+        gap: 15px;
+        .show {
+          display: none;
+        }
+        span {
+          font-size: 1.6rem;
+          color: $main-color;
+          font-weight: bold;
+        }
+        input {
+          width: 25px;
+          height: 25px;
+        }
+        button {
+          background-color: red;
+          padding: 8px;
+          border-radius: 4px;
+          color: #fff;
+          display: block;
+        }
+      }
+      &__filter_menu {
+        @include flex(center, space-between);
+        flex-grow: 1;
+        flex-direction: row;
+        gap: 15px;
+        &__category,
+        &__sort {
+          span {
+            font-size: 1.6rem;
+            color: $main-color;
+            font-weight: bold;
+          }
+          select {
+            font-size: 1.4rem;
+            border: 1px solid $text-second-color;
+            padding: 1rem;
+          }
+        }
+        &__search {
+          font-size: 1.6rem;
+          border: 1px solid $text-second-color;
+          flex-grow: 1;
+          padding: 1rem;
+        }
+      }
+    }
+
     &__not-found {
       transform: translateY(65%);
       &__main {
