--- a/client/src/sass/components/button/_button-load-more.scss
+++ b/client/src/sass/components/button/_button-load-more.scss
@@ -1,11 +1,17 @@
 .btn-load-more {
-  padding: 8px 24px;
-  background-color: $main-color;
-  display: flex;
+  width: 200px;
+  display:flex;
   margin: 0 auto;
-  font-size: 1.8rem;
-  color: #fff;
-  border-radius: 10px;
-  margin-top: 10px;
-  font-weight: 500;
+  button {
+    padding: 10px 20px;
+    background-color: $main-color;
+    display: flex;
+    margin: 0 auto;
+    font-size: 1.8rem;
+    color: #fff;
+    border-radius: 10px;
+    margin-top: 10px;
+    font-weight: 500;
+    text-align: center;
+  }
 }
