--- a/client/src/sass/components/card/_product-card.scss
+++ b/client/src/sass/components/card/_product-card.scss
@@ -5,7 +5,7 @@
   padding-bottom: 50px;
   &__input {
     position: absolute;
-    z-index: 100;
+    z-index: 99;
     bottom: 50%;
     width: 20px;
     height: 20px;
@@ -124,6 +124,9 @@
       margin-right: 10px;
       color: $text-second-color;
     }
+  }
+  &__hide{
+    display: none;
   }
   &__sale {
     @include flex(center, center);
