--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -24,3 +24,5 @@
 @import './components/category';
 @import './components/createProduct';
 @import './components/tippystyle';
+@import './components/profile';
+@import './components/edit-user';
