--- a/client/src/sass/components/_alert-like.scss
+++ b/client/src/sass/components/_alert-like.scss
@@ -2,14 +2,14 @@
 .alert-unlike {
   width: 380px;
   height: 110px;
-  background-color: $main-color;
+  background-color: black;
   position: fixed;
   top: 0;
   right: 0;
   z-index: 100;
   transform: translateY(-100%);
   font-size: 1.4rem;
-  color: $text-main-color;
+  color: #fff;
   border-radius: 10px;
   text-align: center;
   padding: 0 20px;
@@ -27,10 +27,10 @@
       @include flex(center, space-between);
     }
     &__info {
-      color: $text-main-color;
+      color: #fff;
       text-align: left;
       strong {
-        color: #fff;
+        color: red;
       }
     }
   }
