--- a/client/src/sass/components/_header.scss
+++ b/client/src/sass/components/_header.scss
@@ -93,17 +93,20 @@
           right:0;
           transform: translate(50%, -50%)
         }
-        &:hover{
+        &:hover {
           font-weight: bold
         }
         &__user-option {
           display: none;
           background-color: white;
           box-shadow: $box-shadow;
+          font-size: 1.6rem;
           width: 200px;
           @include mobile{
-            right:-10px;
-            width: 150px;
+            right:-50px;
+            width: 230px;
+            font-size: 1.4rem;
+            padding: 5px 20px;
           }
           position: absolute;
           top: 100%;
@@ -112,8 +115,15 @@
           padding: 10px 20px;
           border-radius: 10px;
           margin-top: 10px;
-          &.active{
-            display: block;
+          transition: all 1s;
+          &:after {
+            content: " ";
+            position:absolute;
+            width: 100%;
+            height: 40px;
+            background-color: transparent;
+            top: -40px;
+            left:0;
           }
           &__list{
             @include flex(flex-start, flex-start);
@@ -124,7 +134,6 @@
             a{
               display:block;
               width:100%;
-              font-size: 1.6rem;
               border-bottom: 1px solid #ccc;
               padding: 10px 0;
             }
@@ -141,6 +150,12 @@
         @include mobile {
           font-size: 2.2rem;
         }
+      }
+      &__user-option:hover {
+       .header__menu__right__item__user-option{
+        display:block;
+        animation: dropdown ease 0.25s
+       }
       }
       @include tabletPro {
         font-size: 2.2rem;
@@ -264,5 +279,14 @@
         align-items: center;
       }
     }
+  }
+}
+
+@keyframes dropdown {
+  from {
+    transform: translateY(20px);
+  }
+  to{
+    transform: translateY(0);
   }
 }
