--- a/client/src/sass/components/card/_product-card.scss
+++ b/client/src/sass/components/card/_product-card.scss
@@ -96,6 +96,7 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-transform: capitalize;
   }
   &__price {
     font-size: 1.6rem;
