--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -26,3 +26,4 @@
 @import './components/tippystyle';
 @import './components/profile';
 @import './components/edit-user';
+@import './components/authCss/forgot-password';
