--- a/client/src/sass/components/_catalog.scss
+++ b/client/src/sass/components/_catalog.scss
@@ -69,6 +69,23 @@
           padding: 1rem;
         }
       }
+      @include mobile {
+        flex-direction: column;
+        &__delete-all {
+          width: 100%;
+        }
+        &__filter_menu {
+          align-items: flex-start;
+          flex-wrap: wrap;
+          &__category,
+          &__sort {
+            span {
+              display: block;
+              width: 90px;
+            }
+          }
+        }
+      }
     }
 
     &__not-found {
