--- a/client/src/sass/components/authCss/_signupform.scss
+++ b/client/src/sass/components/authCss/_signupform.scss
@@ -40,14 +40,24 @@
     color: red;
     padding-left: 5px;
   }
-  &__control{
+  &__control {
     margin-top: 20px;
     @include flex(center, space-between);
-    &__btn{
+    flex-wrap: wrap;
+    &__btn {
       padding: 1rem;
       background-color: $main-color;
       color: #fff;
       border-radius: 12px;
+    }
+    &__forgot {
+      width: 100%;
+      order: 1;
+      text-align: center;
+      font-size: 1.4rem;
+      font-style: italic;
+      font-weight: normal;
+      text-decoration: underline;
     }
   }
 }
