--- a/client/src/sass/components/button/_button.scss
+++ b/client/src/sass/components/button/_button.scss
@@ -10,6 +10,7 @@
   overflow: hidden;
   position: relative;
   border-radius: 10px;
+  margin-right: 10px;
   &:hover{
     transform: scale(1.03);
     @include shadow(1)
