--- a/client/src/sass/components/_cart.scss
+++ b/client/src/sass/components/_cart.scss
@@ -82,6 +82,17 @@
               font-size: 1.4rem;
             }
           }
+          &__color,  &__size{
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            border: 2px solid $main-color;
+          }
+          &__size{
+            display:flex;
+            align-items: center;
+            justify-content:center;
+          }
         }
         &__amount {
           @include flex(center, space-between);
