--- a/client/src/sass/components/_loading.scss
+++ b/client/src/sass/components/_loading.scss
@@ -9,6 +9,14 @@
 .loader{
     width: 300px;
     height: 300px;
+    @include tablet{
+        width: 250px;
+        height: 250px;
+    }
+    @include mobile{
+        width: 150px;
+        height: 150px;
+    }
 }
 .loader div{
     width: calc(100% - 15px);
