--- a/client/src/sass/components/_product_view_modal.scss
+++ b/client/src/sass/components/_product_view_modal.scss
@@ -1,41 +1,19 @@
-.product-view__modal {
-    position: fixed;
-    z-index: 101;
-    padding-top: 10px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    opacity: 0;
-    visibility: hidden;
-
-    &.active {
-        opacity: 1;
-        visibility: visible;
+.ReactModal__Content {
+    top: 50% !important;
+    left: 50% !important; 
+    right: auto !important;
+    bottom: auto !important;
+    margin-right: -50% ;
+    transform: translate(-50%, -50%) ;
+    width: 50vw;
+    z-index: 1000;
+    height: 80vh;
+    padding: 0 !important;
+    @include tablet{
+        width: 80vw;
     }
-
-    &__content {
-        margin: auto;
-        padding: 2rem;
-        background-color: $main-bg;
-        width: 50%;
-        opacity: 0;
-        transform: translateY(-250px);
-        transition: transform 0.6s ease;
-        position: relative;
-
-        &__close {
-            position: absolute;
-            right: 0;
-            top: 0;
-        }
-    }
-
-    &.active &__content {
-        opacity: 1;
-        transform: translateY(0);
+    @include mobile{
+        width: 100vw;
+        height: 100vh;
     }
 }
