--- a/client/src/sass/components/button/_button.scss
+++ b/client/src/sass/components/button/_button.scss
@@ -11,6 +11,7 @@
   position: relative;
   border-radius: 10px;
   margin-right: 10px;
+  margin-bottom: 10px;
   &:hover{
     transform: scale(1.03);
     @include shadow(1)
@@ -50,4 +51,16 @@
     font-size: 1.2rem;
     padding: 1.2rem 1.4rem;
   }
+  @include mobile{
+    &-sm &__text {
+      font-size: 1rem;
+      padding: 1rem 1.2rem;
+    }
+  }
+}
+@include mobile{
+  .BtnHide{
+    display: none;
+  }
+
 }
