--- a/client/src/sass/components/product.scss
+++ b/client/src/sass/components/product.scss
@@ -1,5 +1,5 @@
 .product {
-  @include flex(flex-start, flex-start);
+  @include flex(unset, flex-start);
   scroll-behavior: auto;
   @include mobile {
     flex-direction: column;
@@ -32,7 +32,7 @@
     }
     &__main {
       flex-grow: 0.65;
-      @include tablet{
+      @include tablet {
         flex-grow: 0.9;
         padding-top: 100%;
       }
@@ -54,7 +54,7 @@
     flex-grow: 1;
     position: sticky;
     top: $header-shrink-height;
-    @include tablet{
+    @include tablet {
       top: 0;
     }
     padding-top: 1rem;
@@ -130,23 +130,21 @@
     }
   }
   .product__description {
-    @include mobile {
-      display: none;
-    }
-    &.mobile {
-      display: none;
-      @include mobile {
-        display: block;
-      }
-    }
+    max-height: 300px;
+    // @include mobile {
+    //   display: none;
+    // }
+    // &.mobile {
+    //   display: none;
+    //   @include mobile {
+    //     display: block;
+    //   }
+    // }
     width: 100%;
     padding: 2rem 2rem 5rem;
     height: 100%;
     overflow: hidden;
     position: relative;
-    &.expand {
-      height: max-content;
-    }
     &__title {
       font-size: 2.5rem;
       font-weight: 600;
@@ -157,10 +155,16 @@
       font-size: 1.4rem;
       line-height: 2;
       text-align: justify;
+      position: relative;
     }
+    &.expand {
+      height: max-content;
+      max-height:2000px ;
+    }
+
     &__toggle {
       position: absolute;
-      bottom: 0px;
+      bottom: 0;
       left: 50%;
       transform: translateX(-50%);
     }
