--- a/client/src/sass/components/_footer.scss
+++ b/client/src/sass/components/_footer.scss
@@ -26,6 +26,9 @@
   &__content {
     p {
       margin-bottom: 1.25rem;
+      &:hover{
+        color: $main-color;
+      }
     }
   }
   &__end {
