--- a/client/src/sass/components/_profile.scss
+++ b/client/src/sass/components/_profile.scss
@@ -74,6 +74,7 @@
         font-size: 2.6rem;
         text-align: left;
         margin-bottom: 30px;
+        border-bottom: 2px solid  $main-color;
       }
       @include mobile {
         width: 100%;
