--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -13,7 +13,7 @@
 @import './components/catalog';
 @import './components/button/button-load-more';
 @import './components/button/buttonstt';
-@import './components/product';
+@import './components/product-view';
 @import './components/authCss/sign-up';
 @import './components/authCss/signupform';
 @import './components/product_view_modal';
@@ -27,3 +27,4 @@
 @import './components/profile';
 @import './components/edit-user';
 @import './components/authCss/forgot-password';
+@import './components/swiper';
