--- a/client/src/sass/components/product-view.scss
+++ b/client/src/sass/components/product-view.scss
@@ -77,6 +77,7 @@
       }
       &__list {
         @include flex(center, flex-start);
+
         &__item {
           @include flex(center, center);
           @include mobile {
@@ -86,7 +87,7 @@
           width: 50px;
           height: 50px;
           border-radius: 50%;
-          border: 3px solid $main-color;
+          border: 3px solid $text-second-color;
           cursor: pointer;
           margin-right: 1rem;
           .circle {
@@ -102,6 +103,10 @@
             font-size: 1.5rem;
             text-transform: uppercase;
           }
+        }
+        .active {
+          border: 4px solid $main-color;
+          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         }
       }
       &__quantity {
@@ -159,7 +164,7 @@
     }
     &.expand {
       height: max-content;
-      max-height:2000px ;
+      max-height: 2000px;
     }
 
     &__toggle {
