--- a/client/src/sass/_variable.scss
+++ b/client/src/sass/_variable.scss
@@ -1,6 +1,6 @@
 $main-bg: #fff;
 $main-color: #4267b2;
-
+$dark-mode-color:#FBB96B;
 $text-main-color: #000;
 $text-second-color: #8d8d8d;
 $text-white: #fff;
