--- a/client/src/sass/index.scss
+++ b/client/src/sass/index.scss
@@ -28,3 +28,4 @@
 @import './components/edit-user';
 @import './components/authCss/forgot-password';
 @import './components/swiper';
+@import './components/theme';
