--- a/client/src/sass/components/_catalog.scss
+++ b/client/src/sass/components/_catalog.scss
@@ -35,6 +35,7 @@
         input {
           width: 25px;
           height: 25px;
+          border-radius: 50%;
         }
         button {
           background-color: red;
@@ -60,6 +61,7 @@
             font-size: 1.4rem;
             border: 1px solid $text-second-color;
             padding: 1rem;
+            border-radius: 5px;
           }
         }
         &__search {
@@ -67,6 +69,7 @@
           border: 1px solid $text-second-color;
           flex-grow: 1;
           padding: 1rem;
+          border-radius: 5px;
         }
       }
       @include mobile {
