--- a/client/src/sass/components/_profile.scss
+++ b/client/src/sass/components/_profile.scss
@@ -86,6 +86,7 @@
       }
     }
     &__form {
+      position: relative;
       &-group {
         flex-grow: 1;
         margin-bottom: 10px;
@@ -103,6 +104,9 @@
       }
 
       &__btn {
+        position: absolute;
+        bottom:0;
+        right:-40%;
         display: flex;
         background-color: $main-color;
         padding: 8px;
