--- a/client/src/sass/components/product-view.scss
+++ b/client/src/sass/components/product-view.scss
@@ -146,7 +146,7 @@
     //   }
     // }
     width: 100%;
-    padding: 2rem 2rem 5rem;
+    padding: 2rem 0;
     height: 100%;
     overflow: hidden;
     position: relative;
