--- a/client/src/sass/components/_hero-slider.scss
+++ b/client/src/sass/components/_hero-slider.scss
@@ -127,6 +127,7 @@
       }
       &__btn {
         overflow: hidden;
+        width: 200px;
       }
       &__title > span,
       &__description > span,
